manual maven cleanups